# LLM_nav

./: .gitignore  CMakeLists.txt  README.md  package.xml
GPT_interface/: __init__.py  openai_interface_goal.py
helper_functions/: load_key_from_txt.py
launch/: LLM_nav.launch
msg/: Pose.msg
non_ros_scripts/: README.md  image_estimate_robot_path.py  image_estimate_walls_path.py  image_estimate_walls_path_coordinates.py  image_input.py  load_image_llm.py  main.py  openai_interface_goal.py
scripts/: main.py
